query remove intermediate string on query spec request