@@ -56,6 +56,7 @@ import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -994,11 +995,7 @@ public class RxDocumentClientImpl implements AsyncDocumentClient, IAuthorization
             String authorization = this.getUserAuthorizationToken(
                     resourceName, request.getResourceType(), httpMethod, request.getHeaders(),
                     AuthorizationTokenType.PrimaryMasterKey, request.properties);
-            try {
-                authorization = URLEncoder.encode(authorization, "UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                throw new IllegalStateException("Failed to encode authtoken.", e);
-            }
+            authorization = URLEncoder.encode(authorization, StandardCharsets.UTF_8);
             request.getHeaders().put(HttpConstants.HttpHeaders.AUTHORIZATION, authorization);
         }
 
